home page content and divs

--- a/index.html
+++ b/index.html
@@ -4,12 +4,103 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" src="portfolio.css">
+    <link type="text/css" rel="stylesheet" href="portfolio.css">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Portfolio Site</h1>
-    <p><a href='https://github.com/git-pok/portfolio/blob/master/work.html'>Work Page</a></p>
+    <header>
+        <h2>Vincent Impreveduto | Software Engineer</h2>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Work</li>
+                <li>About</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- <h2>Portfolio Site</h2>
+    <p><a href='https://github.com/git-pok/portfolio/blob/master/work.html'>Work Page</a></p> -->
+
+    <article>
+    <!-- <section>
+        <figure>
+            <img src="/Users/ivy/Documents/USF/portfolio/coded-site/img/juanjo-jaramillo-mZnx9429i94-unsplash.jpg" alt="">
+        </figure>
+    </section> -->
+
+    <section class="projects-container">
+        <div class="content-div">
+            <div class="content">
+                <h3>codingLanguages</h3>
+                    <ul>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>jQuery</li>
+                        <li>AJAX/Axios</li>
+                    </ul>
+            </div>
+
+            <div class="content">
+                <h3>gitHubProjects</h3>
+                    <ul>
+                        <li><a href="https://github.com/git-pok/software-engineer">Apps and Projects</a></li>
+                        <li>Project Link</li>
+                    </ul>
+            </div>
+        </div>
+
+        <div class="content-div">
+            <div class="content">
+                <h3>codingTools</h3>
+                <ul>
+                    <li>TwitterBootstrap</li>
+                    <li>Jasmine</li>
+                    <li>JSON Viewer</li>
+                    <li>Rested</li>
+                </ul>
+            </div>
+
+            <div class="content">
+                <h3>liveApps</h3>
+                <ul>
+                    <li><a href="https://git-pok.github.io/git-pages-todo-app/">javaScriptTodoApp</a></li>
+                    <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptClassConnectFour</a></li>
+                    <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptConnectFour</a></li>
+                    <li><a href="https://git-pok.github.io/git-pages-memory-game-color-vs/">javaScriptMemoryGame</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="content-div">
+            <div class="content">
+                <h3>socialMedia</h3>
+                <ul>
+                    <li><a href="www.linkedin.com/in/vincent-impreveduto">linkedIn</a></li>
+                    <li><a href="https://github.com/git-pok">gitHub</a></li>
+                </ul>
+            </div>
+
+            <div class="content">
+                <h3>contactInfo</h3>
+                <ul>
+                    <li><a href="813-507-4490">phoneNumber</a></li>
+                    <li><a href="vincent.impreveduto@icloud.com">emailAddress</a></li>
+                </ul>
+            </div>
+        </div>
+        
+    </section>
+    </article>
+
+    <!-- <h2>Portfolio Site</h2>
+    <p><a href='https://github.com/git-pok/portfolio/blob/master/work.html'>Work Page</a></p> -->
+    <footer>Footer</footer>
     
     <script src="portfolio.js"></script>
 </body>
