--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+<html lang="en"
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="portfolio.css">
-    <link type="text/css" rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="normalize.min.css">
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -107,7 +107,6 @@
     <p><a href='https://github.com/git-pok/portfolio/blob/master/work.html'>Work Page</a></p> -->
     <footer>Footer</footer>
     
-    <script src="modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <script src="portfolio.js"></script>
 </body>
 </html>
