added more live apps

--- a/index.html
+++ b/index.html
@@ -74,10 +74,14 @@
             <div class="content">
                 <h3>liveApps</h3>
                 <ul>
+                    <li><a href="https://git-pok.github.io/ajax-giphy-apis/">ajaxGiphyApi</a></li>
+                    <li><a href="https://git-pok.github.io/ajax-tvmaze-api/">ajaxTvmazeApi</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-todo-app/">javaScriptTodoApp</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptClassConnectFour</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptConnectFour</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-memory-game-color-vs/">javaScriptMemoryGame</a></li>
+                    <li><a href="https://git-pok.github.io/twitter-bootstrap-cards/">twitterBootstrapCards</a></li>
+                    <li><a href="https://git-pok.github.io/twitter-bootstrap-table/">twitterBootstrapTable</a></li>
                 </ul>
             </div>
         </div>
