--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-<html lang="en"
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -74,6 +74,7 @@
             <div class="content">
                 <h3>liveApps</h3>
                 <ul>
+                    <li><a href="https://git-pok.github.io/ajax-giphy-apis/">javaScriptJeopardyGame</a></li>
                     <li><a href="https://git-pok.github.io/ajax-giphy-apis/">ajaxGiphyApi</a></li>
                     <li><a href="https://git-pok.github.io/ajax-tvmaze-api/">ajaxTvmazeApi</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-todo-app/">javaScriptTodoApp</a></li>
