added project link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="content">
                 <h3>liveApps</h3>
                 <ul>
-                    <li><a href="https://git-pok.github.io/ajax-giphy-apis/">javaScriptJeopardyGame</a></li>
+                    <li><a href="https://git-pok.github.io/jeopardy/">javaScriptJeopardyGame</a></li>
                     <li><a href="https://git-pok.github.io/ajax-giphy-apis/">ajaxGiphyApi</a></li>
                     <li><a href="https://git-pok.github.io/ajax-tvmaze-api/">ajaxTvmazeApi</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-todo-app/">javaScriptTodoApp</a></li>
