added more apps button | changed pink color to a more toned color

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         <li>CSS</li>
                         <li>jQuery</li>
                         <li>AJAX/Axios</li>
+                        <li>lodash</li>
                     </ul>
             </div>
 
@@ -68,6 +69,7 @@
                     <li>Jasmine</li>
                     <li>JSON Viewer</li>
                     <li>Rested</li>
+                    <li>APIs</li>
                 </ul>
             </div>
 
@@ -78,11 +80,14 @@
                     <li><a href="https://git-pok.github.io/ajax-giphy-apis/">ajaxGiphyApi</a></li>
                     <li><a href="https://git-pok.github.io/ajax-tvmaze-api/">ajaxTvmazeApi</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-todo-app/">javaScriptTodoApp</a></li>
-                    <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptClassConnectFour</a></li>
+                    <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptClassConnectFour</a><span id="dots">...</span></li>
+                    <!--<span id="dots">...</span>--><span id="more">
                     <li><a href="https://git-pok.github.io/git-pages-connect-four-oop/">javaScriptConnectFour</a></li>
                     <li><a href="https://git-pok.github.io/git-pages-memory-game-color-vs/">javaScriptMemoryGame</a></li>
                     <li><a href="https://git-pok.github.io/twitter-bootstrap-cards/">twitterBootstrapCards</a></li>
                     <li><a href="https://git-pok.github.io/twitter-bootstrap-table/">twitterBootstrapTable</a></li>
+                    </span>
+                    <button type="button" id="rdBtn">More Apps</button>
                 </ul>
             </div>
         </div>
