mentor changes and work.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h2>Vincent Impreveduto | Software Engineer</h2>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Work</li>
+                <li><a href='https://github.com/git-pok/portfolio/blob/master/index.html'>Home</a></li>
+                <li><a href='https://github.com/git-pok/portfolio/blob/master/work.html'>Work</a></li>
                 <li>About</li>
                 <li>Contact</li>
             </ul>
