--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
         <div class="image-container">
             <div class="image-single-title">
                 <div class="image-content-container">
-                    <img src="/img/16-connect-four-oop.jpg" class="image-1" alt="image">
+                    <img src="img/16-connect-four-oop.jpg" class="image-1" alt="image">
                         <div class="caption">
                              Connect Four With JavaScript
                         </div>
@@ -46,7 +46,7 @@
 
             <div class="image-single-title">
                 <div class="image-content-container">
-                    <img src="/img/16-connect-four-oop.jpg" class="image-1" alt="image">
+                    <img src="img/16-connect-four-oop.jpg" class="image-1" alt="image">
                         <div class="caption">
                             Connect Four With JavaScript
                         </div>
@@ -57,7 +57,7 @@
         <div class="image-container">
             <div class="image-single-title">
                 <div class="image-content-container">
-                    <img src="/img/16-connect-four-oop.jpg" class="image-1" alt="image">
+                    <img src="img/16-connect-four-oop.jpg" class="image-1" alt="image">
                         <div class="caption">
                              Connect Four With JavaScript
                         </div>
@@ -66,7 +66,7 @@
 
             <div class="image-single-title">
                 <div class="image-content-container">
-                    <img src="/img/16-connect-four-oop.jpg" class="image-1" alt="image">
+                    <img src="img/16-connect-four-oop.jpg" class="image-1" alt="image">
                         <div class="caption">
                             Connect Four With JavaScript
                         </div>
